--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,14 +1,78 @@
+@import '../../variables.css';
+
+/* Card container */
 .card {
-padding: 1rem;
-/* From https://css.glass */
-background: rgba(255, 255, 255, 0.07);
-border-radius: 4px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 1rem;
+    margin: 1rem 0;
+    width: 100%;
+    display: flex;
+    border-radius: 8px;
+    transition: all 0.5s ease;
 }
 
+.card:hover{
+    background: rgba(255, 255, 255, 0.07);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s ease;
+}
+
+/* Card details */
+.card-left-details {
+    width: 40%;
+}
+
+.card-full-details {
+    width: 60%;
+}
+
+/* Title and text styling */
 .card h3 {
-    color: #00FFC2;
+    margin: 0 5px 0.5rem 0;
+    font-size: 1.3rem;
+    color: var(--color-primary);
+}
+
+.card-title {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.card .date {
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+.card .desc {
+    font-size: 1rem;
+}
+
+/* Technologies styling */
+.technologies {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0.5rem;
+}
+
+.technology-badge {
+    font-size: 0.9rem;
+    border-radius: 10px;
+    color: #28ffcd;
+    margin: 0.2rem 0.5rem 0 0;
+    padding: 2px 8px;
+    background-color: #003d30;
+}
+
+/* Hover effect */
+.card:hover h3 {
+    color: #28ffcd;
+}
+
+@media (max-width: 640px) {
+  .card {
+    flex-direction: column;
+    
+  }
+  .card-full-details {
+    width: 100%;
+  }
 }
