--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import '../../variables.css';
 
 header {        
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
     top: 0;
-    height: 100%;
+    height: calc(100vh - 6rem);
     position: sticky;
-    padding-top: 8rem;
-    color: #FAF9F6;
+    padding-top: 6rem;
+    color: var(--color-primary);
 }
 
-header h1 {
-    font-family: 'DM Serif Display', serif;
-    font-weight: 200;
-    font-size: 4rem;
+header .name {
+    font-family: 'Playfair Display', serif;
+    font-weight: 100;
+    font-size: 3.5rem;
     margin: 0 0 -1.7rem 0;
     padding: 0;
 }
 
 header .personal-desc {
     max-width: 80%;
-    color: #ADADAD;
+    color: var(--color-secondary);
 }
 
 header .section-links {
@@ -32,7 +37,7 @@ header .section-links {
 header hr {
     border: 0;
     margin-right: 1rem;
-    width: 50px;
+    width: 25px;
     height: 1px;
     background: #ADADAD;
     transition: all 0.3s ease;
@@ -44,7 +49,7 @@ header .link {
 }
 
 header .link:hover hr {
-    width: 100px; /* Aumenta a largura da linha no hover */
+    width: 50px; /* Aumenta a largura da linha no hover */
     transition: all 0.3s ease;
 }
   
@@ -55,16 +60,17 @@ header .link:hover .nav-link {
 
 header .nav-link.active {
     hr {
-        width: 100px; /* Largura da linha no link ativo */
+        width: 50px; /* Largura da linha no link ativo */
         transition: all 0.3s ease;
     }
     font-weight: bold;
-    color: #FAF9F6; /* Cor diferente para o link ativo */
+    color: var(--color-primary); /* Cor diferente para o link ativo */
 }
 header .social-links {
-    padding-top: 20rem;
+    margin-top: auto; /* Empurra os links sociais para o final */
+    padding-bottom: 4rem;
 }
 
 header .social-link {
-    padding: 0.25rem;
+    padding-right: 10px;
 }
