--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap');
 
+html{
+  display: flex;
+  justify-content: center;
+}
+
 body {
   margin: 0;
+  max-width: 1280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
   font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;    
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000D2F;
+  background-color: #0c162f;
 }
 
 code {
